    works.
 * Fixed bug in bluring tabs after selection
 * Fixed bug with the Loading... in the history tab
 * Swapped order of Summary and Details tabs
 * Fixed bug in delete-document tab X link. 

2006-10-09 cjg
 * Removed ruler.xml and hardwired it as an <hr>

2006-10-09 cjg
 * Split up Core.pl into more small config files. Some stray things are left
    in misc.pl
 * Remved unsused config options
 * Renamed a number of config options
 * Removed archivename from entities (it will become a phrase)
 * Renamed s/brand.pl/branding.pl/
 * Cookies now all use the same domain and have hard wired names.
 * EPrint-type now always uses "long types"
 * No longer loads archive/foo.xml at all!
 * Added better warnings for Warnings and Errors in foo.pl files.

2006-10-10 moj
 * Phrasing in subject component.

2006-10-10 moj
 * Fixed notes (for userid/cookie_code/params) to clear themselves
 * Added logout to Session

2006-10-11 moj
 * Added entity_convert tool

2006-10-11 cjg
 * Config values are now available from EPScript
 * EPScript can now be embeded in attributes using {}
 * archivename is now a phrase named archive_name
 * Disabled localplugin feature
 * EPScript phrase and print are now available to templates
 * foo{bar} in eprscript now returns value bar of hash foo

2006-10-11 moj
 * generate_apacheconf now loads the repository to make sure the 
    config is there

2006-10-11 moj
 * Converted files with entities to use EPScript and phrases

2006-10-11 cjg
 * Moved upgrade into tools - we'll need it later but not until the
    ep2>ep3 script.

2006-10-11 cjg
 * Started reworking configure_archive into epadmin

2006-10-12 cjg 
 * Removed entities.pl
 * No longer copies entites-en.dtd per language - now just makes one
    copy names entities.dtd
 * Changed the header of all XML files to reflect this.
 * Renamed archivename.pl to archive_name.pl

2006-10-12 cjg
 * Added labels and style to eprint-type (and long-view sets in general)
